cleanup and deduplicating code, added TestB