@@ -33,8 +33,10 @@ import javax.crypto.SecretKey;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.DESKeySpec;
 import javax.crypto.spec.DESedeKeySpec;
+
 import org.socialbiz.cog.exception.NGException;
 import org.socialbiz.cog.exception.ProgramLogicError;
+import org.workcast.streams.Base64;
 
 /**
  * TextEncrypter handles the encruption of password in ini file
@@ -90,8 +92,7 @@ public class TextEncrypter {
         byte[] cleartext = unencryptedString.getBytes(UNICODE_FORMAT);
         byte[] ciphertext = cipher.doFinal(cleartext);
 
-        BASE64Encoder base64encoder = new BASE64Encoder();
-        return base64encoder.encode(ciphertext);
+        return Base64.encode(ciphertext);
     }
 
     public String decrypt(String encryptedString) throws Exception {
@@ -100,8 +101,7 @@ public class TextEncrypter {
         }
         SecretKey key = keyFactory.generateSecret(keySpec);
         cipher.init(Cipher.DECRYPT_MODE, key);
-        BASE64Decoder base64decoder = new BASE64Decoder();
-        byte[] cleartext = base64decoder.decodeBuffer(encryptedString);
+        byte[] cleartext = Base64.decodeBuffer(encryptedString);
         byte[] ciphertext = cipher.doFinal(cleartext);
         return new String(ciphertext, UNICODE_FORMAT);
     }
